istio-config/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: dms-services-mtls
  namespace: dms-system
spec:
  mtls:
    mode: STRICT
  selector:
    matchLabels:
      app: dms-service
